<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f8f9fb"
    android:paddingStart="@dimen/_24sdp"
    android:paddingEnd="@dimen/_24sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/str_login_with_account"
        android:textColor="@color/black_0e0e0e"
        android:textSize="@dimen/_16sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginTop="@dimen/_24sdp"
        android:textColorHint="@color/black_0e0e0e"
        app:hintTextAppearance="@style/TextInputLayoutHint">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_c6c7c9"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="Tài khoản"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="@dimen/_35sdp"
            android:textColor="@color/black_0e0e0e"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_email"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColorHint="@color/black_0e0e0e"
        app:hintTextAppearance="@style/TextInputLayoutHint">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_username"
            android:backgroundTint="@color/gray_c6c7c9"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/str_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="@dimen/_35sdp"
            android:textColor="@color/black_0e0e0e"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/input_layout_password"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/custom_button_login"
        android:elevation="2dp"
        android:stateListAnimator="@null"
        android:text="@string/str_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_48sdp"
        android:layout_below="@id/btn_sign_in"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/shape_button_register">

        <View
            android:id="@+id/login_confirm_account_divider"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/green_00ce93" />

        <TextView
            android:id="@+id/login_confirm_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:text="@string/str_confirm_account"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/login_register_now_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_confirm_account_textview"
            android:layout_alignStart="@id/login_confirm_account_textview"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/str_register_now"
            android:textColor="@color/black_0e0e0e"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/ic_arrow_right_circle" />
    </RelativeLayout>
</RelativeLayout>