<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_f8f9fb"
    android:paddingLeft="@dimen/_4sdp"
    android:paddingRight="@dimen/_4sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imv_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_50sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo" />

    <Button
        android:id="@+id/btn_login_with_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/imv_logo"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/custom_button_login"
        android:elevation="@dimen/_2sdp"
        android:stateListAnimator="@null"
        android:text="Đăng nhập tài khoản"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/item_login_with_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@id/btn_login_with_account"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/custom_button_login_google"
        android:clickable="true"
        android:focusable="true"
        android:elevation="@dimen/_2sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_12sdp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_google"
            android:tint="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="Đăng nhập bằng Google"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_48sdp"
        android:layout_below="@id/item_login_with_google"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/shape_button_register">

        <View
            android:id="@+id/login_confirm_account_divider"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/green_00ce93" />

        <TextView
            android:id="@+id/login_confirm_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_6sdp"
            android:text="@string/str_confirm_account"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/login_register_now_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_confirm_account_textview"
            android:layout_alignStart="@id/login_confirm_account_textview"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/str_register_now"
            android:textColor="@color/black_0e0e0e"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_16sdp"
            android:src="@drawable/ic_arrow_right_circle" />
    </RelativeLayout>
</RelativeLayout>